--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -2,3 +2,6 @@ source "https://rubygems.org"
 
 gem "jekyll", "~> 4.3"
 gem "just-the-docs", "~> 0.10"
+
+# Required for GitHub Actions
+gem "webrick", "~> 1.8"
